# fetch-rs

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: release.yml
pfetch-extractor/: Cargo.toml
src/: fetcher.rs  logo.rs  main.rs  printer.rs  utils.rs
