[package]
name = "fetch-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
pfetch-logo-parser = { path = "./pfetch-logo-parser", version = "0.1.0" }
pfetch-extractor = { path = "./pfetch-extractor", version = "0.2.2" }
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.27.0"
libmacchina = "7.3.0"
os-release = "0.1.0"
glob = "0.3.1"
globset = "0.4.14"
